--- a/options.html
+++ b/options.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Best Fixed Bollard Options for Day Cares</title>
+    <title>Best Fixed Bollard Options for Day Cares in Ontario</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,20 +12,20 @@
 
     <main>
         <section class="content-header">
-            <h1>Our Top Fixed Bollard Solutions</h1>
-            <p>We've curated the best fixed bollard options that balance uncompromising safety with a professional and clean aesthetic, perfect for any day care environment.</p>
+            <h1>Our Top Fixed Bollard Solutions for Ontario Facilities</h1>
+            <p>We've curated the best fixed bollard options that balance uncompromising safety with a professional and clean aesthetic, perfect for any Ontario day care environment looking to comply with new government regulations.</p>
         </section>
 
         <section class="bollard-options">
             <div class="bollard-card">
                 <img src="images/bollard-type-1.jpg" alt="Steel Fixed Bollard">
                 <div class="card-content">
-                    <h3>Standard Steel Bollards</h3>
-                    <p>The industry standard for vehicle protection. These are robust, cost-effective, and can be customized with a variety of powder-coat colors to match your facility's design.</p>
+                    <h3>Crash-Rated Steel Bollards</h3>
+                    <p>For maximum security and peace of mind. These bollards are engineered and tested to stop vehicles at speed, providing the highest level of protection for your property. This is the top choice for high-risk zones and is fully compliant with upcoming **Ontario childcare safety** standards.</p>
                     <ul>
-                        <li>**Material:** High-strength Carbon Steel</li>
+                        <li>**Certified Protection:** Designed to meet M30/M50 crash ratings</li>
                         <li>**Installation:** Core-drilled and concrete-filled for maximum resistance</li>
-                        <li>**Finish:** Durable, rust-resistant powder-coat finish</li>
+                        <li>**Finish:** Durable, rust-resistant powder-coat finish, ideal for all weather conditions</li>
                     </ul>
                     <a href="contact.html" class="cta-button-small">Get a Quote</a>
                 </div>
@@ -35,7 +35,7 @@
                 <img src="images/bollard-type-2.jpg" alt="Decorative Fixed Bollard">
                 <div class="card-content">
                     <h3>Architectural & Decorative Bollards</h3>
-                    <p>Don't sacrifice style for safety. These bollards offer the same high level of protection but with a sleek, modern design. Ideal for facilities that want to maintain an elegant and welcoming appearance.</p>
+                    <p>Don't sacrifice style for safety. These bollards offer the same high level of protection with a sleek, modern design. Ideal for facilities that want to maintain a welcoming appearance while meeting **Ontario safety standards**.</p>
                     <ul>
                         <li>**Material:** Stainless Steel or Cast Iron</li>
                         <li>**Installation:** Embedded for permanent security</li>
@@ -49,7 +49,7 @@
                 <img src="images/bollard-type-3.jpg" alt="Flexible Bollard">
                 <div class="card-content">
                     <h3>Flexible Bollards (Visual-only)</h3>
-                    <p>While not for crash protection, flexible bollards are an excellent option for low-risk areas to guide traffic and visually delineate spaces. They are made from durable, flexible plastic that can withstand minor impacts without damage.</p>
+                    <p>While not for crash protection, flexible bollards are an excellent option for low-risk areas to guide traffic and visually delineate spaces. They are made from durable, flexible plastic that can withstand minor impacts without damage, perfect for defining non-critical pathways.</p>
                     <ul>
                         <li>**Purpose:** Traffic guidance and lane marking</li>
                         <li>**Installation:** Surface mounted with anchor bolts</li>
