--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Day Care Safety: Protect Our Kids</title>
+    <title>Day Care Safety: Protect Our Kids with Bollards</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -30,8 +30,23 @@
         </section>
 
         <section class="introduction">
-            <h2>The Unseen Dangers in Parking Lots</h2>
-            <p>While we focus on what happens inside, a significant risk often goes unaddressed: vehicle-into-building crashes. These tragic, and often preventable, accidents can put our most vulnerable at risk. At [Your Company Name], we provide essential protective barriers to create a secure perimeter around your day care, giving parents and staff peace of mind.</p>
+            <h2>The Unseen Dangers: Vehicle-into-Building Incidents</h2>
+            <p>While we focus on what happens inside, a significant and often preventable risk looms just outside. The tragic **Richmond Hill daycare crash** is a stark reminder of how vulnerable our children are to vehicle-into-building incidents.</p>
+        </section>
+
+        <section class="statistics">
+            <div class="stat-item">
+                <h3>Over 100 crashes a day</h3>
+                <p>According to safety experts, vehicles crash into buildings in North America over **100 times every single day**, resulting in thousands of injuries and fatalities each year. These are not rare occurrences.</p>
+            </div>
+            <div class="stat-item">
+                <h3>Children are at high risk</h3>
+                <p>A significant percentage of these incidents happen at storefronts, offices, and, most alarmingly, at **schools and daycares**. The lives of our most vulnerable are put at risk during common activities like drop-off and pick-up.</p>
+            </div>
+            <div class="stat-item">
+                <h3>Lives are on the line</h3>
+                <p>Every year, hundreds of children are tragically killed or injured in vehicle-related incidents in Canada and the U.S. These are not just statistics; these are children whose futures are cut short by preventable accidents.</p>
+            </div>
         </section>
 
         <section class="key-benefits">
