--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main>
         <section class="hero">
             <div class="hero-content">
-                <h1>Protecting the Future of Our Community</h1>
+                <h1>Protecting1 the Future of Our Community</h1>
                 <p>Ensuring the safest possible environment for children in day care facilities with professional-grade protective barriers.</p>
                 <a href="why-bollards.html" class="cta-button">Learn How We Can Help</a>
             </div>
