--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
                 </div>
                 <div class="col-lg-5">
                     <div class="text-center">
-                        <img src="images/toronto-gta-school-children-safety.jpg" alt="Toronto GTA school children playing safely protected by security bollards and planters" class="img-fluid rounded shadow-lg" style="max-height: 500px; width: 100%; object-fit: cover;">
+                        <img src="images/toronto-gta-school-children-safety.jpg" class="img-fluid rounded shadow-lg" style="max-height: 500px; width: 100%; object-fit: cover;">
                     </div>
                 </div>
             </div>
