--- a/index.html
+++ b/index.html
@@ -837,7 +837,8 @@
                 <div class="col-lg-4 mb-4">
                     <div class="product-showcase">
                         <div class="product-header">
-                            <h4 class="mb-0 fw-bold">Security Planters</h4>
+                            <h4 class="mb-0 fw-bold">Security 
+							Planters</h4>
                             <p class="mb-2">Beautiful Protection & Landscaping</p>
                             <div class="price-badge-canada">$450 - $850 each</div>
                         </div>
