--- a/index.html
+++ b/index.html
@@ -955,9 +955,9 @@
                             </div>
                         </div>
                         <div class="gallery-item">
-                            <img src="images/brampton-school-completed-safety-bollards.jpg" alt="Completed safety bollard installation protecting Brampton school entrance">
+                            <img src="images/brampton-school-completed-safety-bollards.jpg" alt="Completed safety bollard installation protecting Hamilton school entrance">
                             <div class="gallery-overlay">
-                                <h6>After: Protected Brampton School</h6>
+                                <h6>After: Protected Hamilton School</h6>
                                 <p>Complete vehicle protection with professional, attractive safety barriers perfectly installed</p>
                             </div>
                         </div>
