--- a/index.html
+++ b/index.html
@@ -1157,65 +1157,7 @@
                         <div class="card-body p-5">
                             <h4 class="mb-4">Request Your Free Quote & Assessment</h4>
                             <form>
-                                <div class="row">
-                                    <div class="col-md-6 mb-3">
-                                        <label class="form-label fw-bold">Facility Name *</label>
-                                        <input type="text" class="form-control form-control-lg" placeholder="Your Daycare Center Name" required>
-                                    </div>
-                                    <div class="col-md-6 mb-3">
-                                        <label class="form-label fw-bold">Contact Person *</label>
-                                        <input type="text" class="form-control form-control-lg" placeholder="Your Full Name" required>
-                                    </div>
-                                    <div class="col-md-6 mb-3">
-                                        <label class="form-label fw-bold">Email Address *</label>
-                                        <input type="email" class="form-control form-control-lg" placeholder="your.email@example.com" required>
-                                    </div>
-                                    <div class="col-md-6 mb-3">
-                                        <label class="form-label fw-bold">Phone Number *</label>
-                                        <input type="tel" class="form-control form-control-lg" placeholder="(555) 123-4567" required>
-                                    </div>
-                                    <div class="col-md-8 mb-3">
-                                        <label class="form-label fw-bold">Facility Address *</label>
-                                        <input type="text" class="form-control form-control-lg" placeholder="Street Address, City, State, ZIP" required>
-                                    </div>
-                                    <div class="col-md-4 mb-3">
-                                        <label class="form-label fw-bold">Number of Children</label>
-                                        <select class="form-control form-control-lg">
-                                            <option>Select Range</option>
-                                            <option>1-25 children</option>
-                                            <option>26-50 children</option>
-                                            <option>51-100 children</option>
-                                            <option>100+ children</option>
-                                        </select>
-                                    </div>
-                                    <div class="col-12 mb-3">
-                                        <label class="form-label fw-bold">Project Details</label>
-                                        <textarea class="form-control" rows="4" placeholder="Tell us about your safety concerns, current facility layout, specific requirements, or any questions you have about bollard protection..."></textarea>
-                                    </div>
-                                    <div class="col-12 mb-4">
-                                        <label class="form-label fw-bold">Preferred Contact Method</label>
-                                        <div class="d-flex gap-4 flex-wrap">
-                                            <div class="form-check">
-                                                <input class="form-check-input" type="radio" name="contact" id="phone" checked>
-                                                <label class="form-check-label" for="phone">Phone Call</label>
-                                            </div>
-                                            <div class="form-check">
-                                                <input class="form-check-input" type="radio" name="contact" id="email">
-                                                <label class="form-check-label" for="email">Email</label>
-                                            </div>
-                                            <div class="form-check">
-                                                <input class="form-check-input" type="radio" name="contact" id="site-visit">
-                                                <label class="form-check-label" for="site-visit">Schedule Site Visit</label>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-12">
-                                        <button type="submit" class="btn btn-primary btn-lg px-5 py-3">
-                                            <i class="fas fa-shield-alt me-2"></i>Get My Free Safety Assessment
-                                        </button>
-                                        <p class="text-muted mt-3 mb-0"><i class="fas fa-clock me-1"></i> <strong>Guaranteed response within 4 hours</strong></p>
-                                    </div>
-                                </div>
+                                <div class="google-form-container"> <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSctyZZCdoC_KJALFQ2WlyR9-4UZNQhCmOG9w0d_J6284q-MRA/viewform?embedded=true" width="100%" height="800" frameborder="0" marginheight="0" marginwidth="0" style="border-radius: 10px;"> Loading… </iframe> </div> <!-- Alternative: Direct Link Button --> <div class="text-center mt-3"> <a href="https://docs.google.com/forms/d/e/1FAIpQLSctyZZCdoC_KJALFQ2WlyR9-4UZNQhCmOG9w0d_J6284q-MRA/viewform" target="_blank" class="btn btn-outline-primary"> <i class="fas fa-external-link-alt me-2"></i>Open Form in New Window </a> </div>
                             </form>
                         </div>
                     </div>
