--- a/index.html
+++ b/index.html
@@ -1156,9 +1156,7 @@
                     <div class="card" style="box-shadow: 0 10px 30px rgba(0,0,0,0.1);">
                         <div class="card-body p-5">
                             <h4 class="mb-4">Request Your Free Quote & Assessment</h4>
-                            <form>
-                                <div class="google-form-container"> <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSctyZZCdoC_KJALFQ2WlyR9-4UZNQhCmOG9w0d_J6284q-MRA/viewform?embedded=true" width="100%" height="800" frameborder="0" marginheight="0" marginwidth="0" style="border-radius: 10px;"> Loading… </iframe> </div> <!-- Alternative: Direct Link Button --> <div class="text-center mt-3"> <a href="https://docs.google.com/forms/d/e/1FAIpQLSctyZZCdoC_KJALFQ2WlyR9-4UZNQhCmOG9w0d_J6284q-MRA/viewform" target="_blank" class="btn btn-outline-primary"> <i class="fas fa-external-link-alt me-2"></i>Open Form in New Window </a> </div>
-                            </form>
+                            <form id="gta-safety-form" method="POST"> <div class="row"> <div class="col-md-6 mb-3"> <label class="form-label fw-bold">Facility Name *</label> <input type="text" name="entry.123456789" class="form-control form-control-lg" placeholder="Your School/Daycare Center Name" required> </div> <div class="col-md-6 mb-3"> <label class="form-label fw-bold">Contact Person *</label> <input type="text" name="entry.987654321" class="form-control form-control-lg" placeholder="Your Full Name" required> </div> <div class="col-md-6 mb-3"> <label class="form-label fw-bold">Email Address *</label> <input type="email" name="entry.555666777" class="form-control form-control-lg" placeholder="your.email@example.com" required> </div> <div class="col-md-6 mb-3"> <label class="form-label fw-bold">Phone Number *</label> <input type="tel" name="entry.111222333" class="form-control form-control-lg" placeholder="(416) 123-4567" required> </div> <div class="col-12"> <button type="submit" class="btn btn-primary btn-lg px-5 py-3"> <i class="fas fa-shield-alt me-2"></i>Get My Free Safety Assessment </button> </div> </div> </form>
                         </div>
                     </div>
                 </div>
@@ -1310,6 +1308,9 @@
                 }
             });
         });
+		
+		document.getElementById('gta-safety-form').addEventListener('submit', function(e) { e.preventDefault(); const formData = new FormData(this); const submitBtn = this.querySelector('button[type="submit"]'); // Show loading state const originalText = submitBtn.innerHTML; submitBtn.innerHTML = '<i class="fas fa-spinner fa-spin me-2"></i>Sending Request...'; submitBtn.disabled = true; // Submit to Google Forms fetch('https://docs.google.com/forms/d/e/1FAIpQLSctyZZCdoC_KJALFQ2WlyR9-4UZNQhCmOG9w0d_J6284q-MRA/formResponse', { method: 'POST', mode: 'no-cors', body: formData }).then(() => { // Success message alert('Thank you! Your request has been submitted. We\'ll contact you within 4 hours.'); this.reset(); submitBtn.innerHTML = originalText; submitBtn.disabled = false; }).catch(() => { // Still show success since no-cors prevents error detection alert('Thank you! Your request has been submitted.'); this.reset(); submitBtn.innerHTML = originalText; submitBtn.disabled = false; }); });
+
 
         // Active navigation highlighting
         window.addEventListener('scroll', function() {
